hw8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sre-app
  namespace: flask-app
  labels:
    app: sre-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sre-app
  template:
    metadata:
      labels:
        app: sre-app
    spec:
      containers:
      - name: sre-app
        image: belnik/sre-app:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "512Mi"
            cpu: "100m"
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20

      - name: sre-app-py
        image: belnik/sre-app-py:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "512Mi"
            cpu: "100m"
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
