hw8/sre-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sre-app-service
  namespace: flask-app
  labels:
    app: sre-app
spec:
  selector:
    app: sre-app
  ports:
  - name: sre-app
    protocol: TCP
    port: 80
    targetPort: 8080
  - name: sre-app-py
    protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
