hw8/ingress-sre-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sre-app-ingress
  namespace: flask-app
  annotations:
    spec.ingressClassName: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: sre-app.local
    http:
      paths:
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: sre-app-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sre-app-service
            port:
              number: 80
      - path: /healthz
        pathType: Prefix
        backend:
          service:
            name: sre-app-service
            port:
              number: 80
      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: sre-app-service
            port:
              number: 3000
